refact: atualizando arquivos js e css

--- a/src/css/components/_main.scss
+++ b/src/css/components/_main.scss
@@ -4,7 +4,7 @@ main.main__ {
     width: 100%;
     height: calc(100vh - 5rem);
     overflow: hidden;
-    background-color: color.$colorsBlack2;
+    background-color: color.$color-black-100;
 
     display: flex;
     justify-content: center;
