--- a/src/css/abstracts/_reset.scss
+++ b/src/css/abstracts/_reset.scss
@@ -13,13 +13,13 @@
     outline: none;
 }
 
-@media (max-width: break.$laptopXS) {
+@media (max-width: break.$laptop-xs) {
     html {
         font-size: 93, 75%;
     }
 }
 
-@media (max-width: break.$tabletSM) {
+@media (max-width: break.$tablet-sm) {
     html {
         font-size: 87, 5%;
     }
@@ -28,26 +28,14 @@
 body {
     width: 100%;
     height: 100%;
-    background-color: color.$colorsBlack2;
+    background-color: color.$color-black-50;
 
-    font-family: font.$ffDefault;
-    font-weight: font.$fwLight;
-    font-size: font.$fsMD;
-    color: color.$colorsGray2;
-    line-height: font.$lhTall;
+    font-family: font.$ff-default;
+    font-weight: font.$fw-light;
+    font-size: font.$fs-md;
+    color: color.$color-gray-100;
+    line-height: font.$lh-tall;
     text-transform: none;
-}
-
-img,
-svg {
-    max-width: 100%;
-    display: block;
-}
-
-a {
-    color: color.$colorsGray0;
-    text-decoration: none;
-    outline: none;
 }
 
 h1, h2, h3, h4, h5, h6, p, span, small, address {
@@ -58,12 +46,28 @@ h1, h2, h3, h4, h5, h6, p, span, small, address {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 
-    font-family: font.$ffHighlight;
-    font-weight: font.$fwExtraBold;
-    color: color.$colorsYellow2;
+    font-family: font.$ff-highlight;
+    font-weight: font.$fw-extra-bold;
+    color: color.$color-secondary;
     line-height: calc(1em + 1rem);
+}
+
+h4, h5, h6 {
+    color: color.$color-white;
 }
 
 h1 {
     font-size: calc(1.375rem + 1.5vw);
+}
+
+a {
+    color: color.$color-gray-50;
+    text-decoration: none;
+    outline: none;
+}
+
+img,
+svg {
+    max-width: 100%;
+    display: block;
 }
